--- a/dataset/CreateTfRecord.ipynb
+++ b/dataset/CreateTfRecord.ipynb
@@ -24,6 +24,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Obs: If you only have one of the datasets, just run all the notebook's cells and it will work just fine."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -45,7 +52,7 @@
    "source": [
     "# define base paths for pascal augmented VOC images\n",
     "# download: http://home.bharathh.info/pubs/codes/SBD/download.html\n",
-    "base_dataset_dir_aug_voc = '/home/thallessilva/Documents/datasets/benchmark/benchmark_RELEASE/dataset'\n",
+    "base_dataset_dir_aug_voc = '<pascal/augmented/VOC/images/path>/benchmark_RELEASE/dataset'\n",
     "images_folder_name_aug_voc = \"img/\"\n",
     "annotations_folder_name_aug_voc = \"cls/\"\n",
     "images_dir_aug_voc = os.path.join(base_dataset_dir_aug_voc, images_folder_name_aug_voc)\n",
