--- a/dataset/CreateTfRecord.ipynb
+++ b/dataset/CreateTfRecord.ipynb
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Obs: If you only have one of the datasets, just run all the notebook's cells and it will work just fine."
+    "#### Obs: If you only have one of the datasets (does not matter which one), just run all the notebook's cells and it will work just fine."
    ]
   },
   {
